tests/syntax_error/empty_byte_literal.jou
def main() -> int:
    return ''  # Error: a byte literal cannot be empty, maybe use double quotes to instead make a string?
